add lastest changes

--- a/MasterThesis/Smart_Contract.tex
+++ b/MasterThesis/Smart_Contract.tex
@@ -6,7 +6,7 @@
 \usepackage{lmodern}% better font than default
 \usepackage{tgcursor}% tt font with bold/italic styles
 \usepackage{listings}
-\usepackage{graphicx,wrapfig,lipsum}
+\usepackage{graphicx,lipsum}
 \usepackage[colorlinks]{hyperref}
 \usepackage{lscape}
 \usepackage{amssymb}
