--- a/MasterThesis/chapter2.tex
+++ b/MasterThesis/chapter2.tex
@@ -1,22 +1,20 @@
 \chapter{Blockchain as the Infrastructure of Semantic Web}
-A distributed ledger is increasingly used to represent transactions between multiple parties throughout the world. It is difficult to search for specific information in a distributed ledger without an index. Therefore, indexing data in the distributed ledger is a requirement that provides the ability to search across multiple ledgers, enhancing the power and usability of this system as well \cite{Third}.
+In more and more places throughout the world, transactions involving numerous parties are represented by distributed ledgers. Without an index, it is challenging to search for specific data in a distributed ledger. As a result, indexing data in the distributed ledger is a prerequisite that gives users the capacity to search across many ledgers, hence boosting the system's functionality and usability \cite{Third}.
 \section{Distributed Ledgers and Indexing}
-A distributed ledger based on a blockchain does not have central control. Blockchains are organized into multiple blocks; the initial block is created manually, and the other blocks are added by some consensus process between nodes.
-The Ethereum smart contract provides the possibility to automatically control what happens with cryptocurrency on the blockchain without involving untrusted external sources. Ethereum smart contracts have an account that can normally store, update, or perform a function with the input and output.
-As smart contracts are time-ordered, where data are stored in blocks, the data must be indexed. Indexing the smart contract gives us the capability to access the data, search, analyze services on the distributed ledger, and expose them to the outside world for more interactions.
-There are different levels of indexing smart contracts: The basic level is the fundamental level for the next step. It indexes basic entities such as accounts and blocks related to distributed levels, and data can be stored or retrieved here. At the functional level, smart contracts contain a lot of functional interfaces that depict the other functionality of platforms such as Ethereum \cite{Third}.
+A distributed ledger built on a blockchain lacks centralized management. Multiple blocks make up a blockchain; the first block is manually made, and subsequent blocks are added by some sort of consensus mechanism amongst nodes. \\
+With the help of an Ethereum smart contract, it is possible to autonomously handle transactions on the blockchain without involving any dubious third parties. The accounts used by Ethereum smart contracts often have the ability to store data, change it, or carry out operations using input and output.
+Data must be indexed since smart contracts are time-ordered and hold information in blocks. By indexing the smart contract, we are able to explore, evaluate, and utilize the distributed ledger's services, as well as expose them to the outside world for more interactions. \\
+There are various indexing levels for smart contracts: The fundamental level for the following step is the basic level. Data can be stored or accessed here, and it indexes fundamental distributed ledger entities like accounts and blocks. Smart contracts have many functional interfaces that represent the additional capabilities of systems like Ethereum at the functional level \cite{Third}.
 \subsection{Why Do We Use Ontology for Blockchain?}
-Generally, blockchain is a distributed database that is replicated over all nodes and uses a cloud computing architecture. In the other word, data in database distributed across many organizations. Thus, data should have a common interpretation to be understandable for organizations. These interpretations are applicable via a formal specification that enables verification and inference within software and applications executed on the network. \\
-This is where ontology plays the main role in ensuring a common interpretation of data in the shared database among different enterprises.
+Blockchain often uses a cloud computing architecture and is a distributed database that is copied across all nodes. In other words, the database contains data that is dispersed among numerous organizations. In order for data to be properly understood by organizations, there needs to be a standard interpretation. These interpretations are applicable through a formal specification that allows for verification and inference in network-based software and applications. \\
+Here, ontology is crucial in ensuring that various enterprises have a common interpretation of the data in the shared database.\\
 Blockchain as a modeling form uses a different type of ontology \cite{Kim}: \\
 \\
-\textbf{\textit{Informal/Semi ontology}} facilitates search and enhances a better understanding of the business process for developing and applying on the blockchain \cite{Kim}. \\
+\textbf{\textit{Informal/Semi-Ontology}} facilitates search and enhances a better understanding of the business process for developing and applying on the blockchain \cite{Kim}. \\
 \\
-\textbf{\textit{Formal ontology}} helps the formal specification automate inference and verify the operation of the blockchain. In other words, blockchain modeling based on a formal ontology can help with the development of smart contracts to execute on the blockchain \cite{Kim}. \\
-\\
-Also, we can use ontologies to capture data within the blockchain: On the one hand, it facilitates a better understanding of blockchain concepts for humans. On the other hand, it enables interlinking with other linked data to convey deductions and formal reasoning \cite{Kim}.\\
-Vocabulary used within an ontology increases the transparency of transactions by describing the transaction in the context of linked data and facilitating the graphical representation of the location of such transactions. Thus, it also increases the capability of analysis by users \cite{Kim}.
-
+\textbf{\textit{Formal Ontology}} helps  the formal specification in automating inference and validating the blockchain's functionality. In other words, formal ontology-based blockchain can help in the creation of smart contracts that run on the blockchain \cite{Kim}. \\
+Ontologies can also be used to store data in the blockchain: On the one hand, it helps people grasp blockchain concepts better. On the other hand, it allows for the interlinking with other linked data to convey formal reasoning and inferences, \cite{Kim}. \\
+By describing the transaction in the context of connected data and enabling the graphical representation of the location of such transactions, vocabulary employed inside an ontology increases the transparency of transactions. Consequently, it also improves users' analytical capacity \cite{Kim}.
 \begin{center}
 	
 	
@@ -32,14 +30,12 @@ Vocabulary used within an ontology increases the transparency of transactions by
 	\end{figure}
 	
 \end{center}
-
 \subsection{Linked Data}
-According to Tim Berbers-Lee et al. \cite{Tim}, 'Linked data is about using the Web to create typed links between data
-from different sources'. When information
-is presented as linked data, other related information can be easily retrieved, and new information can also be easily linked to it. \textit{Berners-Lee} described four rules for linked data:\\
-\textbf{- URIs} (Uniform Resource identifier) as names.\\
+According to Tim Berners-Lee et al., "linked data" is the creation of typed linkages between data from various sources using the Web \cite{Tim}. When information is presented as linked data, it is easy to obtain relevant additional information and link new information to it.
+\textit{Berners-Lee} described four rules for linked data:\\
+\textbf{- URIs} (Uniform Resource Identifier) as names.\\
 \textbf{- HTTP} to search for names.\\
-\textbf{- (SPARQL, RDF)} provides related information about what a user looking for. \\
+\textbf{- SPARQL, RDF} provide related information about what a user is looking for. \\
 \textbf{- Link} to other URLs to provide more information \cite{Hector}.\\
 
 \begin{center}
@@ -56,32 +52,31 @@ is presented as linked data, other related information can be easily retrieved, 
 	
 \end{center}
 \subsection{RDF}
-The Resource Description Framework (RDF) is a family of W3C specifications. RDF is used to describe and model information. It describes a subject that predicts an object and is called a triple.
-i) Subjects that RDF expressions describe.
-ii) Predict specific properties, attributes, or relationships to describe a resource.
-iii) The object is the name of a property or value \cite{Hector}.
+A group of W3C specifications is known as the Resource Description Framework (RDF). Information is described and modeled using RDF. It is referred to as a triple and describes a topic that predicts an object.
+i) The topics described by RDF expressions.
+ii) Mention certain characteristics, traits, or connections when describing a resource.
+The object's name refers to a property or set of values. \cite{Hector}.
 \subsection{SPARQL}
-According to Wikipedia's definition, "it is a semantic query language for a dataset that makes us able to retrieve and modify data stored in RDF format known as triples.". SPARQL can query the one, two, or all elements of triples.
+It is a semantic query language for a dataset that enables us to retrieve and alter data stored in RDF format known as triples, according to Wikipedia's definition. One, two, or all of a triple's elements can be queried using SPARQL \cite{Hector}.
 
-\subsection{OWL (Ontology Web Language) }
-Ontology web language is made to represent knowledge about things and the relations among them. OWL is a computational logic-based language, which means the language modeled in OWL can operate in a computer program like negation, intersection, and so on \cite{Hector}.
+\subsection{OWL (Ontology Web Language)}
+Ontology Web Language is intended to represent information about objects and their relationships. Because OWL is built on computational logic, its language models can be used in computer programs to perform operations like negation and intersection \cite{Hector}.
 \subsection{Evolution of World Wide Web}
-The evolution and interaction of people on the Internet are classified based on three technologies: \\
+Based on three technologies, the development and interaction of users on the Internet are categorized: \\
 \begin{itemize}
-\item\textit{Web 1.0} also known as \textit{web of document} is the earliest website with the basic capability of linking to other websites. \\
-\item\textit{Web 2.0} known as \textit{web of data} has the capability of providing space for users to collaborate on content creation or modification.\\
-\item\textit{Web 3.0} is strengthened by the semantic web, where people have access to linked information on the web. But recently, with the arrival of distributed technologies like blockchain and Ethereum which get used by Web 3.0, this is a new focus on this \cite{Kujur}.
+\item\textit{Web 1.0}, also known as \textit{web of document}, is the earliest website with the basic capability of linking to other websites. \\
+\item\textit{Web 2.0}, known as \textit{web of data}, enables users to participate in the creation or alteration of content.\\
+\item\textit{Web 3.0} is strengthened by the Semantic Web, which gives users access to linked information on the web. Recently, there has been a fresh emphasis on this due to the introduction of distributed technologies like blockchain and Ethereum, which are employed by Web 3.0 \cite{Kujur}.
 \end{itemize}
 
 \section{Vocabularies}
 \subsection{Vocabulary in Distributed Ledger}
-Generating linked data requires the use of a standard ontology or vocabulary to explain blockchain concepts. Interfaces between distributed ledgers and the semantic web are still in their early stages. There are some systems and vocabularies that specify such a vocabulary
-like FlexLedger, EthOn, and BLONDiE. \cite{Third}.\\
+A common ontology or vocabulary must be used to describe blockchain concepts in order to create linked data. The semantic web and distributed ledger interfaces are still in their infancy. Systems and vocabularies like FlexLedger, EthOn, and BLONDiE specify such a language \cite{Third}.\\
 \\
-\textbf{\textit{FlexLedger}} describes HTTP interfaces to blockchains, with a standard vocabulary and responses to these interfaces. It is a protocol for decentralized ledger and graph data models that represent ledger creation, querying, and data modeling using JSON-LD. However, FlexLedger does not have an explicit vocabulary about ontology, nor does it have a concrete ontology for itself. \\
-It is striking to say that the FlexLedger is not suitable to implement in some graph models like graph chains because in the FlexLedger meta and the content data are stored together in the same graph, whereas the GraphChain blocks content is stored outside the blockchain in a separate graph \cite{Sopek}.\\
+\textbf{\textit{In FlexLedger}}, HTTP interfaces to blockchains are described together with common language and responses. It is a protocol that represents ledger creation, querying, and data modeling using JSON-LD for decentralized ledger and graph data models. However, neither FlexLedger nor its own internal ontology has any specific language related to ontologies. \\
+Because the FlexLedger meta and the content, data are stored together in the same graph, whereas the GraphChain blocks content is saved outside the blockchain in a different graph, it is significant to highlight that the FlexLedger is not suited to implement in particular graph models like graph chains \cite{Sopek}.\\
 \\
-\textbf{\textit{EthOn}} is an OWl ontology that describes blockchain classes such as \textit{'blocks', 'accounts', 'message', 'state'} and relations such \textit{'has parent block'} \cite{Rashid}. 
+\textbf{\textit{EthOn}} is an OWL ontology that describes blockchain classes such as \textit{'blocks', 'accounts', 'messages', 'states'} and relations such as \textit{'has parent block'} \cite{Rashid}.
 \begin{center}
 	
 	\begin{figure}[htb!]
@@ -90,7 +85,7 @@ It is striking to say that the FlexLedger is not suitable to implement in some g
 			\centering
 			\includegraphics[width=1.80\textwidth]{images/chap2_EthOnContract.png}
 		\end{minipage}
-		\caption[EthOn classes]{EthOn contract model(blue arrow is object properties, green arrow is data properties, purple circle is instance and blue one is class) \cite{Rashid}}
+		\caption[EthOn classes]{EthOn contract model (the blue arrow is object properties, the green arrow is data properties, the purple circle is an instance and blue one is a class) \cite{Rashid}}
 		
 	\end{figure}
 	
@@ -106,7 +101,7 @@ It is striking to say that the FlexLedger is not suitable to implement in some g
 	\end{figure}
 	
 \end{center}
-\textbf{\textit{BLONDiE (Blockchain Ontology with Dynamic Extensibility)}} is another OWL ontology for describing the blockchain structure, like EthOn. But it is more generic than EthOn. For example, EthOn and BLONDiE both defined some terms such as 'account', 'block', and 'transaction', as well as some attributes such as 'transaction payload' or 'miner address'. BLONDiE defines some other concepts for different blockchains, such as 'BitcoinBlockHeader' and 'EthereumBlockHeader' as subclasses of 'BlockHeader'. At the moment, BLONDiE supports two cryptocurrencies like bitcoin and Ethereum, where all links and relations between objects and attributes are represented in RDF (Resource Description Framework) \cite{Third}.
+\textbf{\textit{BLONDiE (Blockchain Ontology with Dynamic Extensibility)}} is another OWL ontology that describes the structure of a blockchain similar to EthOn. However, it is less specific than EthOn. Examples include the definitions of terminology like "account," "block," and "transaction" as well as some properties like "transaction payload" or "miner address" in EthOn and BLONDiE. Other terms for various blockchains, such as "BitcoinBlockHeader" and "EthereumBlockHeader," are defined by BLONDiE as subclasses of "BlockHeader." Currently, BLONDiE supports two cryptocurrencies, such as Bitcoin and Ethereum, in which all connections and relationships among objects and characteristics are expressed using the RDF (Resource Description Framework) format \cite{Third}.
 \begin{center}
 	\begin{figure}[htb!]
 		
@@ -121,26 +116,24 @@ It is striking to say that the FlexLedger is not suitable to implement in some g
 	
 \end{center}
 \subsection{Vocabulary in Smart Contract}
-As mentioned earlier, EthOn and BLONDiE are both similar concepts that can be used for smart contracts. There are many works on semantic annotation of the web and HTTP-APIs that may enable us to annotate smart contracts as well. However, the contracts are not web APIs, and the implementation may differ, but the main concept does not. In other words, the vocabularies used to annotate web services are also used to annotate smart contracts. It seems that the combination of a distributed ledger with a smart contract and web service due to profitability will become common \cite{Third}.
+As was already noted, two concepts that can be employed for smart contracts are EthOn and BLONDiE. We may be able to annotate smart contracts thanks to several works on HTTP-APIs and semantic annotation of the web. Although the implementation may vary and the contracts are not on web APIs, the fundamental idea remains the same. In other words, smart contracts are annotated using the same vocabulary as are used to annotate web services. Due to their profitability, it appears that distributed ledgers, smart contracts, and web services will frequently be combined \cite{Third}.
 
 \section{Semantify Blockchain}
 \subsection{Semantic Blockchain}
-With increasing the use of blockchain technology recently, the need for semantic reasoning on the distributed ledger is on the increase as well. The blockchain is the best platform to utilize semantic web principles in this technology and add a new trusted property to a dataset. 
-Using semantic web technology on the blockchain is a novel idea and the way how to apply this technology in blockchain and smart contracts is also a controversial issue.\\
-There are some \textbf{definition of semantic blockchain:}\\ 
-\textit{- Semantic blockchain is the representation of stored data on distributed ledger using linked data. }\\
-\textit{- Semantic blockchain is the applying semantic web standard on the blockchain that these standards are based on RDF \cite{Hector}.}
+Recent growth in the adoption of blockchain technology has increased the demand for semantic reasoning on the distributed ledger as well. To implement semantic web principles in this technology and add a new trusted attribute to a dataset, the blockchain is the best platform. \\
+The idea of using semantic web technology with blockchain is new, and how to implement it with smart contracts is also up for debate\\
+The following are some \textbf{definitions of semantic  blockchain:} \\
+\textit{- Semantic blockchain is the application of semantic web standards on the blockchain; these standards are based on RDF.}\\
+\textit{-Semantic blockchain is the representation of stored data on a distributed ledger using linked data \cite{Hector}.}\\
 \subsection{Semantification Process}
-Semantic blockchain or semantic distributed ledger affects the industrial world and subsequently, the result leads to the start development of new applications and frameworks to combine two worlds.
-there are some ways to semantify blockchain as bellow:\\
-\textbf{-} Mapping the blockchain data to RDF making usage of vocabulary, ontology, and so on. \\
-\textbf{-} Storage of data in a blockchain is expensive, The only way is to store the hashing point to the data set in the blockchain and then share RDF on the blockchain. \\
-\textbf{-} Creating semantic blockchain that exchanges internal data protocol in RDF format \cite{Hector}. \\
-\subsection{Semantic Ontology Mapping using BLONDiE} 
-To generate RDF, it needs to map the basic blockchain entities to relevant semantic web terms, concepts, and ontologies. To make the query more efficient, BLONDiE is extended in two ways: Firstly, records relating to both blocks and transactions have been
-augmented with an attribute for the hash of each entity. Secondly, records relating to the transactions have been augmented with links to entities like blocks or smart contracts.\\
-Blockchain stores just a binary form of each contract with metadata. To interact with the contract, the Application Binary Interface (ABI) specification is required. This specification is in the form of JSON and is created when a smart contract is compiled and stored on the blockchain. The ABI determines all functions of contracts and provides descriptions of input, and output parameters for each contract \cite{Third}.
-
+The industrial world is impacted by semantic blockchain or semantic distributed ledger, and as a result, new applications and frameworks are being developed to bridge the two worlds. \\ 
+There are some ways to semantify blockchain, as follows:\\
+\textbf{-} Converting blockchain data to RDF while using vocabulary, ontology, and other tools. \\
+Due to the high cost of data storage in blockchains, the only viable option is to first save the hash point to the dataset in the blockchain before sharing RDF. \\
+Building a semantic blockchain to communicate internal data protocols in RDF \cite{Hector}. 
+\subsection{Semantic Ontology Mapping Using BLONDiE}
+The basic blockchain elements must be mapped to the pertinent semantic web terms, concepts, and ontologies in order for the system to produce RDF. The BLONDiE query has been enhanced in two ways to improve efficiency: First, an attribute for each entity's hash has been added to records pertaining to blocks and transactions. Second, records pertaining to the transactions have been enhanced with references to other objects, such as blocks or smart contracts. \\
+Blockchain only keeps a binary form of each contract together with its associated metadata. The Application Binary Interface (ABI) standard is necessary in order to communicate with the contract. This specification, which is formed when a smart contract is put together and kept on the blockchain, is in the form of JSON. The ABI establishes all contract functions and offers descriptions of each contract's input and output parameters \cite{Third}.
 \begin{center}
 	\begin{figure}[htb!]
 		
