--- a/MasterThesis/conclusions.tex
+++ b/MasterThesis/conclusions.tex
@@ -1,10 +1,9 @@
 \chapter{Conclusion}
-This work contributes to integrating semantic licenses from the DALICC library with smart contracts and some problems that are still open in the literature special when considering the few works that integrate blockchain with semantic web.\\
- For this purpose, We focused on two things as the infrastructure of our work:\\
- One is the Ethereum Platform which is developed and implemented to keep the system reliable, secure, autonomous, and decentralized.\\
- The second one is Ethon ontology which formalizes the concepts and terms of the Ethereum Blockchain in OWL, describing the Ethereum objects as
-classes in ontology. It covers the main Blockchain concepts as Blocks, Accounts, Transactions, Contract Messages, and the relation between the instances of these classes.
-therefore, licensing system has been created which keeps the integrity of license information and also provided a semantic view of such deployment environment using Ethon ontology concepts.\\
-To do this, the user is guided to start licensing and get its licensing receipt step by step. \\
-This DApp also has its limitations and for most of them, solutions have been defined. Thus, in this work, we have developed the basic methods for the license attachment to data and also developed semantic mapping for the result of this attachment process as a receipt.
+This work adds to the literature by merging semantic licensing from the DALICC library with smart contracts and a few unresolved difficulties, especially in light of the scant number of studies that combine blockchain with the semantic web.\\
+ As the foundation of our work, we concentrated on two elements for this purpose: \\
+One such example is the Ethereum platform, which was created and put into use to maintain the system's dependability, security, autonomy, and decentralization. 
+The second is the Ethereum ontology, which in OWL formalizes the ideas and terminology of the Ethereum blockchain and describes Ethereum objects as classes. Blocks, accounts, transactions, contract messages, and the connections between the instances of these classes are only a few of the key blockchain ideas covered.
+As a result, leveraging Ethereum ontology concepts, a licensing system has been developed that preserves the integrity of license information and offers a semantic perspective of such a deployment environment.\\ 
+The user is directed step-by-step through the licensing process to begin and receive their license receipt. \\
+This DApp has certain restrictions as well, although most of them have solutions. Thus, in this work, we have created the fundamental techniques for the license attachment to data as well as a semantic mapping for the receipt that is the end product of this attachment procedure.
 
