--- a/MasterThesis/introduction.tex
+++ b/MasterThesis/introduction.tex
@@ -1,13 +1,12 @@
 \section{Introduction}
-Distributed ledger on the blockchain has become the most popular in recent years \cite{Third}. The features which make blockchain useful in cryptocurrency such as proof of consensus, secure transactions, and transparently - also make it suitable in many other contexts like healthcare, social, supply chain management, etc. \\
-Ethereum blockchain is one of the well-known ledgers which is capable of generating decentralized applications, and managing cryptocurrency using smart contracts \cite{Third}. It is the platform for developers coding smart contracts in a decentralized paradigm to generate decentralized application DApp \cite{William}. 
-A smart contract is a code written in a solidity program language, stored in blockchain, and executing some functionality out of blockchain based on the terms of the contract in the most trusted way \cite{Third}. \\
-As distributed ledger like blockchian has been widely used in diverse type, the need of making queries over data, and index entries, becomes more important. The most important thing is integrating stored data on the blockchain with external resources, in other words, there is a need for linked data \cite{Third}. \\
-According to Tim-Berners-Lee (creator of the World Wide Web), 'linked data is the semantic web done right, and the web done right'\cite{Hector}. 
- The semantic web is a set of standards that enable access, integration, and query on data sources, and creates a variety of insight between different application domains. It can also use ontology to represents Ethereum entities like blocks, and transactions to allow queries from the web using SPARQL and linking datasets \cite{Third}. \\
-In this thesis, we deal with some problems: First one is to find a method to integrate semantic licenses from the DALICC library into a smart contract. 
-DALICC stands for Data Licenses Clearance Center is a framework that supports automated clearance of rights to help detect license conflict and reduce the cost of high transactions related to manual clearance of licensing contents.
-It is developed and integrated into different functionalities that allow the automated clearance of rights issues \cite{Anna}.\\
-The second one is that licenses from DALICC are already connected to the blockchain, But it does not have a semantic representation of the records themselves. Therefore, we used EthOn ontology\footnote{http://ethon.consensys.net/} to generate a semantic model, mapping this model with information retrieved from deployed smart contracts in RDF format. \\
-To address these issues in our thesis, we created a DApp adapted from previous work on a similar topic to attach licenses to contents\footnote{https://github.com/kilianhnt/dalicc-license-annotator}, then applied semantic web techniques linking extracted data from Ethereum transactions to related EthOn ontology concepts. \\
-In the first chapter, we described distributed ledger technology, blockchain, Ethereum, and some relevant details to have a better insight into the used technology. In the next chapter, we represented some works around how the semantic web can be applied to the blockchain. And on the last chapter, we presented DApp to show smart contract integration with the DALICC semantic licenses library and semantic representation of this deployment.
+Distributed ledger on the blockchain has gained popularity recently \cite{Third}. The characteristics of blockchain that make it valuable for cryptocurrencies, such as proof of consensus, safe transactions, and transparency, also make it appropriate in many other situations, including supply chain management, healthcare, and social services. \\
+One of the well-known ledgers that can create decentralized applications and manage cryptocurrencies using smart contracts is the Ethereum blockchain \cite{Third}. It serves as a platform for programmers to create decentralized applications (DApp), as William cites, by implementing smart contracts in a decentralized paradigm. \\
+A smart contract is a piece of code created in the Solidity programming language, stored on the blockchain, and responsible for executing certain blockchain-based functionality in accordance with the terms of the contract in the most reliable manner  \cite{Third}. \\
+With the widespread adoption of distributed ledger technology like blockchain in a variety of contexts (such as public blockchain, private blockchain, etc.), the requirement for data queries and index entries is becoming more crucial. The integration of data recorded on the blockchain with outside sources is crucial; in other words, connected data is required to \cite{third}. \\
+The World Wide Web was founded by Tim Berners-Lee, who asserts that "linked data is the semantic web done right, and the web done right" \cite{Hector}. 
+In addition to enabling access, integration, and query on data sources, the semantic web is a collection of standards that fosters communication between various application domains and produces a variety of insights. Additionally, it can employ ontology to represent Ethereum elements like blocks and transactions to support SPARQL web queries and dataset linking \cite{Third}. \\
+In this thesis, we address the following issues: The first step is to figure out how to incorporate DALICC library semantic licenses into a smart contract. 
+Data Licenses Clearance Center, or DALICC, is a framework that encourages automated rights clearance in order to detect license conflicts and lower the cost of high transactions associated with human licensing content clearance \cite{Anna}.\\
+The second is that although DALICC licenses are already linked to the blockchain, the records themselves are not semantically represented. As a result, we created a semantic model using the EthOn ontology \cite{http://ethon.consensys.net/}, and mapped it to data that we obtained from deployed smart contracts in RDF format. \\
+In order to solve these concerns, we built a DApp to attach licenses to content, using earlier work on the subject \footnote{https://github.com/kilianhnt/dalicc-license-annotator} \cite{David}. We then used semantic web approaches to link data taken from Ethereum transactions to relevant EthOn ontology concepts. \\
+To have a deeper understanding of the technology being employed, we discussed blockchain, Ethereum, distributed ledger technology, and some additional relevant subjects in the first chapter. We discussed some research on how the semantic web can be used with blockchain in the following chapter. Additionally, we demonstrated a DApp in the last chapter to illustrate how smart contracts may be integrated with the DALICC semantic licenses library and represented semantically in this deployment. \\
